# scrapy_workua

./: hw20.py  pyproject.toml
scrapy_workua/: .travis.yml  people.json  pyproject.toml  requirements.txt  scrapy.cfg
scrapy_workua/scrapy_workua/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_workua/scrapy_workua/spiders/: workua.py
